--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   d_info: ^0.2.0
   d_method: ^0.2.6
   d_session: ^0.0.3
+  foundation: ^0.0.5
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +69,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
+  assets:
   - assets/
 
 
