--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+#config
+/home/pradibta/Portofolio/Teman-Kerja/lib/config/appwrite.dart
